<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutCreator"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_creator"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:textSize="25sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="@color/cardview_dark_background"
        android:layout_margin="15sp"
        android:elevation="15sp"/>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:layout_width="150sp"
        android:layout_height="150sp"
        app:cardCornerRadius="50sp"
        app:cardElevation="5sp">
    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/ashish"
        android:layout_gravity="center"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ashish_zingade"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Karnataka"
        android:textSize="15sp"
        android:layout_gravity="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        app:cardElevation="10sp"
        android:layout_margin="15sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About Me"
        android:textSize="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="5sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:background="@color/cardview_dark_background"
                android:layout_margin="5sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:textAlignment="gravity"
        android:layout_marginTop="2sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="15sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5sp"
        app:cardElevation="2sp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timetaken"/>



    </androidx.cardview.widget.CardView>
</LinearLayout>
</androidx.core.widget.NestedScrollView>