<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mode_activity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="10sp"
        app:cardCornerRadius="15sp"
        android:layout_gravity="center"
        android:layout_margin="15sp">
       <ImageView
           android:layout_width="250sp"
           android:layout_height="250sp"
           android:src="@drawable/logo_crop">
       </ImageView>
    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/btn_daily"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_margin="15sp"
            app:cardCornerRadius="15sp"
            app:cardElevation="10sp"
            android:clickable="true"
            android:layout_gravity="center_vertical"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:src="@drawable/dailyl"
                    android:layout_gravity="center"
                    android:layout_marginStart="15sp"/>
                <View
                    android:layout_width="2sp"
                    android:layout_height="match_parent"
                    android:background="@color/cardview_dark_background"
                    android:layout_marginStart="25sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"/>
                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/routine_mode"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_random_mode"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_margin="15sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp"
        android:clickable="true"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/random_logo"
            android:layout_gravity="center"
            android:layout_marginStart="15sp"/>
        <View
            android:layout_width="2sp"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background"
            android:layout_marginStart="25sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"/>
        <TextView
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/random_mode"
            android:textSize="30sp"
            android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        app:cardCornerRadius="10sp"
        android:layout_margin="15sp"
        app:cardElevation="10sp"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_creator"
            android:textSize="20sp"
            android:gravity="center"/>



    </androidx.cardview.widget.CardView>



</LinearLayout>